[package]
name = "aa_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0"
quick-xml = "0.31.0"
crossterm = "0.27.0"
